--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
         <!--        TESTING     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
