Agregando el resto de actualizaciones de los serviios

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,28 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+<!--        PDF GENERATOR-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>barcodes</artifactId>
+            <version>7.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>7.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>io</artifactId>
+            <version>7.2.4</version>
+        </dependency>
+
 
         <!--        TESTING     -->
         <dependency>
