--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,7 @@ spring.application.name=GestionInventarioEly
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 
-# Para que funcione tanto local como en Render
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/gestion_inventario_dev}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/gestion_inventario_dev}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:123456}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,8 +19,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-
-# Puerto para Render
 server.port=${PORT:8080}
 
 # ConfiguraciÃ³n JWT
