Se corrigio errores de ArrayLIst en cache config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,7 +57,7 @@ management.endpoints.web.exposure.include=health,info,metrics,prometheus,caches,
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.metrics.distribution.sla.http.server.requests=50ms,100ms,200ms,400ms
 
