Se corrigio errores de prod-properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Production Configuration
-spring.profiles.active=prod
+#spring.profiles.active=prod
 
 # Database optimizations for production
 spring.datasource.hikari.maximum-pool-size=30
