Corrigiendo algunos errroes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.application.name=GestionInventarioEly
 
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/gestion_inventario_dev}
 spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:123456}
+spring.datasource.password=${DB_PASSWORD:Inv0k3r123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool Configuration (HikariCP)
@@ -35,7 +35,7 @@ spring.jpa.properties.hibernate.jdbc.fetch_size=50
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+#spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
