--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.4</version>
+        <version>3.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.emersondev</groupId>
@@ -13,22 +13,14 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>GestionInventarioEly</name>
     <description>GestionInventarioEly</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <lombok.version>1.18.34</lombok.version>
     </properties>
+    
     <dependencies>
         <!-- Persistencia y Base de datos-->
         <dependency>
@@ -36,22 +28,18 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.mysql</groupId>-->
-<!--            <artifactId>mysql-connector-j</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
         <!--    Security    -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        
         <!--        WEB Y REST API  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,6 +50,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
 
@@ -111,7 +100,7 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
-<!--        PDF GENERATOR-->
+        <!-- PDF GENERATOR-->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>kernel</artifactId>
@@ -133,7 +122,6 @@
             <version>7.2.4</version>
         </dependency>
 
-
         <!--        TESTING     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -152,11 +140,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
@@ -164,6 +156,7 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -186,6 +179,7 @@
                     </image>
                 </configuration>
             </plugin>
+            
             <!-- Maven Surefire Plugin for better test performance -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -197,6 +191,7 @@
                     <reuseForks>true</reuseForks>
                 </configuration>
             </plugin>
+            
             <!-- Maven Resources Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -207,5 +202,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
