Corrigiendo algunos errores de caches

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.leak-detection-threshold=60000
 
 # JPA/Hibernate Performance Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
