Implementando componente de Ticketera para las impresiones en Ticket, e implementacion del igv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,34 @@ management.metrics.distribution.sla.http.server.requests=50ms,100ms,200ms,400ms
 
 # Zona Horaria
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Lima
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Ticketera XPrinter XP-V320M Configuration
+app.ticketera.modelo=XPrinter XP-V320M
+app.ticketera.puerto=USB
+app.ticketera.ancho-papel=58
+app.ticketera.timeout=5000
+app.ticketera.velocidad-baudios=9600
+app.ticketera.control-flujo=none
+app.ticketera.bits-datos=8
+app.ticketera.bits-parada=1
+app.ticketera.paridad=none
+
+# Empresa Information for Tickets
+app.empresa.nombre=MI EMPRESA S.A.C.
+app.empresa.ruc=20123456789
+app.empresa.direccion=Av. Principal 123, Lima - Peru
+app.empresa.telefono=+51 123-456-789
+app.empresa.email=ventas@miempresa.com
+app.empresa.web=www.miempresa.com
+
+# Ticket Configuration
+app.ticket.mostrar-logo=false
+app.ticket.caracteres-por-linea=32
+app.ticket.cortar-papel-automatico=true
+app.ticket.copias-por-defecto=1
+app.ticket.mensaje-agradecimiento=Gracias por su compra
+app.ticket.mensaje-despedida=Vuelva pronto!
