--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.leak-detection-threshold=30000
 
 # JPA Production Settings
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
